# bfpt

./: .dockerignore  .gitignore  BUGS.md  CMakeLists.txt  Dockerfile  README  README.md  generate_dep_graph.sh
app/: .clang-format  CMakeLists.txt  clang-format-all.sh
app/bfpt_common/: CMakeLists.txt
app/chainkernel/: CMakeLists.txt
app/kbasis_tests/: CMakeLists.txt
app/koperator_impl/: CMakeLists.txt
app/koperator_trait/: CMakeLists.txt
app/kpopulator_impl/: CMakeLists.txt
app/kpopulator_trait/: CMakeLists.txt
app/kstate/: CMakeLists.txt
app/kstate_impl/: CMakeLists.txt
app/kstate_impl_tests/: CMakeLists.txt
app/kstate_op_integral/: CMakeLists.txt
app/kstate_op_range/: CMakeLists.txt
app/kstate_op_range_tests/: CMakeLists.txt
app/kstate_trait/: CMakeLists.txt
app/kstate_view_amend_spec/: CMakeLists.txt
app/model_monostar/: CMakeLists.txt
app/monostar_app/: CMakeLists.txt
app/monostar_hamiltonians/: CMakeLists.txt
app/monostar_system/: CMakeLists.txt
app/so_app/: CMakeLists.txt
app/so_hamiltonians/: CMakeLists.txt
app/so_system/: CMakeLists.txt
bfpt/: CMakeLists.txt
bfpt/src/: main.cpp
extensions/: CMakeLists.txt
extensions/include/extensions/: adaptors.hpp  range_streamer.hpp
extensions_tests/: CMakeLists.txt
extensions_tests/src/: adaptor_tests.cpp  range_streamer_test.cpp  rotated.cpp
linear_algebra/: CMakeLists.txt
model_monostar/: CMakeLists.txt
opt/: examples.txt  optimizer.py  x2y2.py
post/: plot_results.py  plot_results_new.py  requirements.txt
temp/: integrity_testing_commands
(+360 files in other folders)
